# zk-vote

./: .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  AGENT.md  CLAUDE.md  README.md  audit.md  docker-compose.yml  firebase.json  foundry.toml  hardhat.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend-firebase.yml  deploy-frontend.yml  deploy-production.yml
contracts/: Groth16Verifier.sol  Groth16Verifier_100_10.sol  Groth16Verifier_10_10.sol  Groth16Verifier_20_10.sol  Groth16Verifier_3.sol  Groth16Verifier_30_10.sol  Groth16Verifier_4_10.sol  Groth16Verifier_4_5.sol  Groth16Verifier_50_10.sol  Groth16Verifier_5_4.sol  Groth16Verifier_6_10.sol  Groth16Verifier_8_10.sol  VotingTally.sol
contracts/test/: MockVerifier.sol
docs/: API_COMPATIBILITY.md  ARCHITECTURE_REVIEW.md  DATA_MODEL.md  DOC_DEBT.md  IMPLEMENTATION_GOALS.md  PRODUCTION_READINESS.md  PROJECT_PLAN.md  RUNBOOK_CUTOVER.md  RUNBOOK_PHASE18_STANDUP.md  RUNBOOK_SUPERSEDE.md  SECURITY_AUDIT_2026-06.md  SECURITY_REVIEW.md  TECH_STACK.md
frontend/: .env.example  README.md  buildspec.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.js  App.tsx  LoginButton.js  firebase.js  firebase.ts  index.css  index.js  main.tsx  setupProxy.js  setupTests.ts  supabase.js  vite-env.d.ts
infra/gcp/: production-db-readback-entrypoint.sh  production-migrate-entrypoint.sh  production-migrate.Dockerfile  production-readonly-grants-entrypoint.sh  production-superadmin-bootstrap-entrypoint.sh
rust-backend/: Cargo.toml  Dockerfile  rust-toolchain.toml
rust-backend/.cargo/: audit.toml
rust-backend/crates/api/: Cargo.toml
rust-backend/crates/api/src/: config.rs  error.rs  leases.rs  main.rs  middleware.rs  ratelimit.rs  state.rs  tickets.rs
rust-backend/crates/api/src/auth/: jwks.rs  mod.rs  token.rs
rust-backend/crates/api/src/routes/: admin.rs  artifacts.rs  elections.rs  finalize.rs  health.rs  manage.rs  me.rs  mod.rs  vote.rs  voters.rs
rust-backend/crates/api/testdata/: proof_fixture.json  test_only_jwks.json  test_only_rsa_key.pem
rust-backend/crates/chain/: Cargo.toml
rust-backend/crates/chain/src/: lib.rs
rust-backend/crates/chain/tests/: local_node.rs
rust-backend/crates/db/: Cargo.toml
rust-backend/crates/db/src/: lib.rs  repos.rs
rust-backend/crates/db/tests/: repos_pg.rs
rust-backend/crates/domain/: Cargo.toml
rust-backend/crates/domain/src/: lib.rs  services.rs
rust-backend/crates/workers/: Cargo.toml
rust-backend/crates/workers/src/: lib.rs
rust-backend/crates/zkp/: Cargo.toml
rust-backend/crates/zkp/src/: lib.rs  merkle.rs  poseidon.rs
rust-backend/crates/zkp/testdata/: poseidon_vectors.json
rust-backend/db/: roles.sql
rust-backend/migrations/: 0001_initial.sql  0002_node_api_compatibility.sql  0003_phase3_hardening.sql  0004_supersede_and_deployments.sql  0005_voter_commitment_uniqueness.sql  0006_admin_governance.sql  0007_auth_identities.sql
script/: Deploy.s.sol
scripts/: README.md  assertVerifierArity.js  deployAll.js  deployEnv.js  deployEnv.ts  deploy_verifier.js  deploy_votingtally.js  zkArtifacts.js  zkArtifacts.ts
scripts/ci/: check-artifact-schema.sh
scripts/cicd/: cloudbuild-production-migrate.yaml  cloudbuild-staging-api.yaml  deploy-firebase-hosting-rest.ts  deploy-production-api.sh  deploy-staging-api.sh  render-firebase-config.ts  (+2 more)
server/: .env.example  index.js  package-lock.json  package.json  redisClient.js  supabaseClient.js
test/: VoteCircuit.t.sol  VotingTally.js  VotingTally.t.sol  addAdminsRoute.js  adminInvitations.js  artifactInfoRoute.js  authMiddleware.js  completeVoteRoute.js  deployEnv.js  deployEnv.test.ts  electionListRoutes.js  email.js  etlChecksum.js  etlChecksum.test.ts  fieldElement.js  fieldElement.test.ts  finalizeVoteRoute.js  importUsersToGcip.js  importUsersToGcip.test.ts  meRoute.js  merkleRegistration.js  poseidonCompat.js  poseidonCompat.test.ts  proofRoute.js  redisLock.js  registerByAdminRoute.js  registerRoute.js  routeTestUtils.js  securityHardening.test.ts  seedBeaconGate.test.ts  setupAndDeployRoute.js  submissionTickets.js  submitValidation.js  submitZkRoute.js  supersede.js  voteCircuit.js  zkArtifacts.js  zkArtifacts.test.ts
types/: shims.d.ts
zk/: setUpZk.sh
(+241 files in other folders)
