[workspace]
members = [
  "crates/api",
  "crates/domain",
  "crates/db",
  "crates/chain",
  "crates/zkp",
  "crates/workers",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
redis = { version = "0.27", features = ["tokio-comp"] }
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
alloy = { version = "1", default-features = false }
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
