[package]
name = "zkvote-api"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
tower-http.workspace = true
uuid.workspace = true
zkvote-db = { path = "../db" }
zkvote-domain = { path = "../domain" }

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
