[package]
name = "zkvote-api"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
time.workspace = true
uuid.workspace = true
zkvote-chain = { path = "../chain" }
zkvote-db = { path = "../db" }
zkvote-zkp = { path = "../zkp" }
alloy.workspace = true
zkvote-domain = { path = "../domain" }

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
