[package]
name = "zkvote-zkp"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
light-poseidon.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true
num-bigint.workspace = true

[dev-dependencies]
serde_json.workspace = true
